# ogrewater

./: .hgtags  CMakeLists.txt  LICENSE  OWApplication.cpp  OWApplication.h  OWMain.cpp  OgreWater.sln  README.md  resources.cfg.in
OgreWater/: OWAnimatedMesh.cpp  OWAnimatedMesh.h  OWApplication.cpp  OWApplication.h  OWMain.cpp  OWWater.cpp  OWWater.h  OgreWater.vcxproj  OgreWater.vcxproj.filters
OgreWater/Resources/Compositors/: OWPPFog.compositor
OgreWater/Resources/Materials/: OWCaustics.material  OWDepth.material  OWFog.material  OWPPFog.material  OWPPHorizontalBlur.material  OWPPVerticalBlur.material  OWWater.material  OWWaterDust.material  OWWaterDustDepth.material
OgreWater/Resources/Particles/: OWAirBubbles.particle  OWWaterDust.particle
OgreWater/Resources/Programs/: OWCaustics.program  OWDepth.program  OWFog.program  OWPPFog.program  OWPPHorizontalBlur.program  OWPPVerticalBlur.program  OWWater.program  OWWaterDustDepth.program
OgreWater/Resources/Shaders/: OWCaustics.hlsl  OWCausticsFP.glsl  OWCausticsVP.glsl  OWDepth.hlsl  OWDepthFP.glsl  OWDepthVP.glsl  OWFog.hlsl  OWFogFP.glsl  OWFogVP.glsl  OWPPEffect.hlsl  OWPPEffectVP.glsl  OWPPFog.hlsl  OWPPFogFP.glsl  OWPPFogVP.glsl  OWPPHorizontalBlur.hlsl  OWPPHorizontalBlurFP.glsl  OWPPHorizontalBlurVP.glsl  OWPPVerticalBlur.hlsl  OWPPVerticalBlurFP.glsl  OWWater.hlsl  OWWaterDustDepth.hlsl  OWWaterDustDepthFP.glsl  OWWaterDustDepthVP.glsl  OWWaterFP.glsl  OWWaterVP.glsl
